[package]
name = "room"
version = "0.1.0"
edition = "2021"
authors = ["Hakan Vardar"]
description = "Zoom Screen"
license = "MIT"
repository = "https://github.com/HakanVardarr/room"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.5.3"
sdl2 = {version = "0.35.2", features = ["image"]}

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1